# mtph

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/scripts/: verify_changed.py
.github/workflows/: ci.yml  pages.yml  release.yml  verify.yml
js/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.web.json
js/src/: compileSvg.ts  dsl.ts  equations.ts  html.ts  index.ts  latex.ts  md.ts  model.ts  params.ts  parser.ts  plot.ts  pyfmt.ts  random.ts  shapes.ts  validate.ts
js/test/: conformance.test.ts  webcomponent.test.ts
js/web/: app.ts  embed-core.ts  examples.ts  mtph-doc.ts  mtph-text.d.ts
playground/: README.md  index.html  mtph-doc.html
problems/math/: m1-companion-kronecker-resultant.mtph  m10-nonlinear-recurrence-asymptotics.mtph  m2-punctured-aztec-diamond.mtph  m3-iterated-sine-asymptotics.mtph  m4-reciprocal-binomial-sum.mtph  m5-degenerate-stationary-phase.mtph  m6-lattice-points-tilted-ellipse.mtph  m7-periodic-tridiagonal-spectrum.mtph  m8-functional-equation-geometry.mtph  m9-random-polynomial-real-roots.mtph
problems/physics/: p1-coupled-pendulum-catastrophe.mtph  p10-active-brownian-ratchet.mtph  p11-electroosmotic-ratchet.mtph  p2-magnetic-mirror-drift.mtph  p3-viscoelastic-thread.mtph  p4-quantum-beats-vsystem.mtph  p5-self-heating-thermoelectric.mtph  p6-top-on-rough-sphere.mtph  p7-bistable-climate-column.mtph  p8-ferrofluid-rosensweig.mtph  p9-landau-zener-bath.mtph
python/tests/: conftest.py  test_action.py  test_audit.py  test_body_blocks.py  test_cas.py  test_diagram.py  test_dimension.py  test_equations.py  test_equiv.py  test_grading.py  test_inspect.py  test_mutations.py  test_notation.py  test_numeric.py  test_onboarding.py  test_params.py  test_parser.py  test_parts.py  test_plot.py  test_quiz.py  test_render.py  test_render_polish.py  test_solution_check.py  test_validate.py  test_verify.py  test_viewer.py
python/tools/: gen_conformance.py  gen_mutations.py  mutation_report.py
spec/: SPEC.md  schema.json
spec/examples/: circuit.mtph  earnshaw-trap.mtph  incline.mtph  integral.mtph  loop-the-loop.mtph  magnetic-isotropy-breaker.mtph  pendulum-period.mtph  projectile-range.mtph  projectile.mtph  rotating-hoop.mtph  saddle-flow.mtph  triangle.mtph
spec/mutations/: earnshaw-trap__factor1.mtph  earnshaw-trap__power1.mtph  earnshaw-trap__signflip1.mtph  earnshaw-trap__signflip2.mtph  free-fall__factor1.mtph  free-fall__power1.mtph  free-fall__unit1.mtph  (+27 more)
thesis/: card.md  phythesis.md
(+115 files in other folders)
